--- a/css/main.css
+++ b/css/main.css
@@ -156,12 +156,13 @@ h1 {
 }
 
 .header {
-  position: absolute;
-  top: 16px;
-  left: 0;
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 2;
   display: flex;
-  width: 100%;
+  width: 1280px;
   align-items: center;
   justify-content: space-between;
   padding: 6px;
@@ -226,6 +227,10 @@ h1 {
   padding: 16px;
   height: 43px;
   border: 2px solid var(--grey-more-light);
+}
+
+.logo__fixed {
+  display: none;
 }
 
 .hero__section-container {
