--- a/sass/layouts/_product-section-list.scss
+++ b/sass/layouts/_product-section-list.scss
@@ -12,7 +12,10 @@
     padding: 12px;
 
 }
-
+.product__button:hover,
+.product__button:focus{
+    cursor: pointer;
+}
 .product__list-container{
     display: flex;
     flex-wrap: wrap;
@@ -31,6 +34,27 @@
     display: block;
     position: absolute;
     top: -25px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.product__list-image_buds{
+    display: block;
+    position: absolute;
+    top: -39px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.product__list-image_stick{
+    display: block;
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.product__list-image_box{
+    display: block;
+    position: absolute;
+    top: 50px;
     left: 50%;
     transform: translateX(-50%);
 }
