--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,12 @@ h1 {
   color: var(--black);
 }
 
+button:hover,
+button:focus {
+  cursor: pointer;
+  color: var(--grey-more-light);
+}
+
 .button__image {
   margin-left: 12px;
 }
@@ -193,6 +199,11 @@ h1 {
   align-items: center;
   justify-content: center;
   color: var(--white);
+}
+
+.nav__link:hover,
+.nav__link:focus {
+  color: var(--grey-more-light);
 }
 
 .header__button {
@@ -621,6 +632,7 @@ h1 {
   }
 }
 .question__form {
+  position: relative;
   width: 630px;
   padding: 24px;
   border-radius: 24px;
@@ -1436,4 +1448,53 @@ h1 {
   position: absolute;
   bottom: 24px;
   right: 24px;
+}
+
+.backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(32, 30, 30, 0.2);
+  transition-property: opacity visibility;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  overflow: hidden;
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.modal {
+  position: absolute;
+  top: 150px;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.modal__container {
+  position: relative;
+  width: 630px;
+}
+
+.button__close {
+  position: absolute;
+  z-index: 10;
+  top: 20px;
+  right: 20px;
+  padding: 0;
+  width: 24px;
+  height: 24px;
+  border: none;
+  background-color: var(--white);
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }/*# sourceMappingURL=main.css.map */
