--- a/css/main.css
+++ b/css/main.css
@@ -244,6 +244,10 @@ button:focus {
   display: none;
 }
 
+.swiper {
+  z-index: 0;
+}
+
 .hero__section-container {
   position: relative;
   display: flex;
@@ -1083,7 +1087,7 @@ button:focus {
   left: 410px;
   width: 413px;
   height: 631px;
-  z-index: 2;
+  z-index: 1;
 }
 
 .product__row-container {
@@ -1240,15 +1244,18 @@ button:focus {
   color: var(--white);
 }
 
-.partners__link {
-  margin: 0 auto;
-}
-
 .images__container {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 48px;
+}
+
+.partners__button {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 243px;
 }
 
 .footer {
@@ -1452,6 +1459,7 @@ button:focus {
 
 .backdrop {
   position: fixed;
+  z-index: 10;
   width: 100%;
   height: 100%;
   top: 0;
