--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import './base/common.scss';
 
 @import './utils/variables.scss';
+@import './utils/mixin.scss';
 
 @import './layouts/header.scss';
 @import './layouts/hero-section.scss';
