--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,6 +1,5 @@
 .header{
     position: fixed;
-    // top:16px;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
@@ -8,12 +7,69 @@
     display: flex;
     // width: 100%;
     width: 1280px;
+    // width: 343px;
     align-items: center;
     justify-content:space-between;
     padding: 6px;
     border-radius: 32px;
     margin: 0 auto;
+      >.button__mobile__menu{
+        display: none;
+      }
+    @include tablet{
+        width: 648px;
+        >.navigation{
+            display: none;
+        }   
+        >.button__mobile__menu{
+            display: flex;
+        }
+    }
+    @include mobile{
+        width: 343px;
+        >.navigation{
+            display: none;
+        }
+        >.header__button{
+            display: none;
+        }
+        >.button__mobile__menu{
+            display: flex;
+        }
+
+    }
 }
+
+// .header__mobile{
+//     width: 343px;
+//       @include tablet{
+//         display: none;
+//       }
+//       @include desktop{
+//         display: none;
+//       }
+// }
+// .header__tablet{
+//     width: 648px ;
+//     // display:none;
+//     @include mobile{
+//         display: none;
+//     }
+//     @include desktop{
+//         display: none;
+//     }
+// }
+// .header__desktop{
+//     width: 1280px;
+//     // display: none;
+//     @include mobile{
+//         display: none;
+//     }
+//     @include tablet{
+//         display: none;
+//     }
+// }
+
 
 .logo{
     margin-left: 18px;
