--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,10 @@ h1 {
   display: none;
 }
 
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 .container {
   width: 1440px;
   padding: 80px;
@@ -163,12 +167,15 @@ button:focus {
 
 .header {
   position: fixed;
-  width: 343px;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 375px;
   z-index: 20;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 6px;
+  padding: 16px 16px;
   border-radius: 32px;
   margin: 0 auto;
 }
@@ -187,7 +194,8 @@ button:focus {
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .header {
-    width: 648px;
+    width: 744px;
+    padding: 16px 48px;
   }
   .header > .navigation {
     display: none;
@@ -205,7 +213,8 @@ button:focus {
 }
 @media screen and (min-width: 1440px) {
   .header {
-    width: 1280px;
+    width: 1440px;
+    padding: 16px 80px;
   }
   .header > .navigation {
     display: flex;
@@ -309,11 +318,25 @@ button:focus {
 
 .hero__container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   margin: 0 auto;
-  width: 1440px;
-  margin-top: 119px;
-  padding: 0 0 88px 0;
+  width: 375px;
+  padding: 156px 16px 0 16px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .hero__container {
+    width: 744px;
+    padding: 156px 48px 0 48px;
+    flex-direction: column;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .hero__container {
+    width: 1440px;
+    flex-direction: row;
+    padding: 119px 80px 88px 80px;
+  }
 }
 
 .hero__container-orange {
@@ -337,35 +360,61 @@ button:focus {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  width: 800px;
-  margin-left: 88px;
+  width: 100%;
 }
 
 .hero__title {
   font-family: var(--font-title);
   font-weight: 700;
-  font-size: 72px;
+  font-size: 38px;
   line-height: 120%;
   text-transform: uppercase;
   color: var(--white);
-  margin-bottom: 10px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .hero__title {
+    font-size: 64px;
+    margin-bottom: 5px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .hero__title {
+    font-size: 72px;
+    margin-bottom: 10px;
+  }
 }
 
 .hero__subtitle {
   font-family: var(--font-title);
   font-weight: 400;
-  font-size: 64px;
+  font-size: 36px;
   line-height: 120%;
   letter-spacing: 0.02em;
   text-transform: uppercase;
   color: var(--white);
   margin-bottom: 20px;
 }
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .hero__subtitle {
+    font-size: 36px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .hero__subtitle {
+    font-size: 64px;
+  }
+}
 
 .hero__text {
   text-align: left;
   color: var(--white);
   margin-bottom: 24px;
+  font-size: 16px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .hero__text {
+    font-size: 18px;
+  }
 }
 
 .hero__link {
@@ -373,31 +422,61 @@ button:focus {
   align-items: center;
   justify-content: space-between;
   border-radius: 32px;
-  padding: 8px 8px 8px 24px;
-  width: 316px;
+  padding: 8px 24px 8px 24px;
+  width: 343px;
   background: var(--white);
   font-family: "Fixel Display", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 140%;
   color: var(--black);
+  margin-bottom: 25px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .hero__link {
+    width: 316px;
+    padding: 8px 8px 8px 24px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .hero__link {
+    width: 316px;
+    padding: 8px 8px 8px 24px;
+  }
 }
 
 .hero__image-container {
   position: relative;
-  margin-right: 188px;
+  margin-bottom: 54px;
+}
+@media screen and (min-width: 1440px) {
+  .hero__image-container {
+    margin-right: 188px;
+  }
 }
 
 .hero__image {
   position: absolute;
   z-index: -100;
+  width: 214px;
+  height: 307px;
   transform: translate(-5%, -5%);
   top: 0;
   left: 0;
-  width: 500px;
-  height: 500px;
   border-radius: 100%;
   filter: blur(250px);
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .hero__image {
+    width: 389px;
+    height: 558px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .hero__image {
+    width: 413px;
+    height: 593px;
+  }
 }
 
 .hero__image-orange {
