--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -6,6 +6,10 @@ h1{
     display: none;
 }
 
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 .container{
     // width: 1280px;
     width: 1440px;
