retina for imaages

--- a/css/main.css
+++ b/css/main.css
@@ -37,9 +37,10 @@ h1 {
 }
 
 .container {
-  width: 1440px;
-  padding: 80px;
+  width: 375px;
+  padding: 16px;
   margin: 0 auto;
+  @inc;
 }
 
 .container__grey {
@@ -457,10 +458,10 @@ button:focus {
 
 .hero__image {
   position: absolute;
-  z-index: -100;
-  width: 214px;
-  height: 307px;
-  transform: translate(-5%, -5%);
+  z-index: 100;
+  width: 300px;
+  height: 300px;
+  transform: translate(-15%, 5%);
   top: 0;
   left: 0;
   border-radius: 100%;
@@ -468,14 +469,16 @@ button:focus {
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .hero__image {
-    width: 389px;
-    height: 558px;
+    width: 400px;
+    height: 400px;
+    transform: translate(-15%, 5%);
   }
 }
 @media screen and (min-width: 1440px) {
   .hero__image {
-    width: 413px;
-    height: 593px;
+    width: 300px;
+    height: 300px;
+    transform: translate(-15%, -10%);
   }
 }
 
