--- a/sass/layouts/_section-collection.scss
+++ b/sass/layouts/_section-collection.scss
@@ -1,61 +1,135 @@
 .collection__subtitle{
     font-family: 'Tektur', sans-serif;
     font-weight: 600;
-    font-size: 32px;
+    font-size: 24px;
     line-height: 120%;
     text-align: center;
     color: var(--white);
     margin-bottom: 16px;
+    @include tablet{
+        font-size: 32px;
+    }
+    @include desktop{
+        font-size: 36px;
+    }
 }
 .collection__text{
-    margin-bottom: 48px;
+    width: 100%;
+    margin-bottom: 32px;
     color: var(--white);
+    @include tablet{
+        width: 423px;
+        margin-bottom: 32px;
+    }
+    @include desktop{
+        width: 414px;
+        margin-bottom: 48px;
+    }
 }
 .collection__text-small{
-    margin-bottom: 130px;
+    margin-bottom: 95px;
+    @include tablet{
+        margin-bottom: 80px;
+    }
+    @include desktop{
+        margin-bottom: 80px;
+    }
 }
 .collection__link{
     color: var(--white);
 }
 .collection__container{
     display: flex;
-    gap: 24px;
+    flex-direction: column;
+    gap: 20px;
+@include tablet{
+        flex-direction: column;
+    }
+    @include desktop{
+        flex-direction: row;
+    }
 }
 .collection__block{
     position: relative;
     display: flex;
     width: 100%;
-    height: 360px;
+    // height: 360px;
     border-radius: 24px;
     margin-bottom: 24px;
+    
 }
 .collection__block-blue{
-    text-align: center;
+    padding: 24px 16px;
+    text-align: start;
     justify-content: center;
     background: linear-gradient(153deg, #12a1de 0%, #c6ffd9 100%);
+    @include tablet{
+        width: 100%;
+        text-align: start;
+        padding: 38px;
+    }
+    @include desktop{
+        // width: 630px;
+        width: 100%;
+        text-align: center;
+        padding: 54px 24px;
+    }
 }
 .collection__block-yellow{
-    width: 630px;
-    // height: 312px;
-    padding: 24px;
+    width: 100%;
+    padding: 24px 16px;
     background: linear-gradient(136deg, #f5a609 14.5%, #fff9a8 100%);
+    @include tablet{
+        width: 100%;
+        padding: 38px;
+    }
+    @include desktop{
+        width: 630px;
+        padding: 65px 24px;
+    }
+
 }
 .collection__block-pink{
-    width: 630px;
-    // height: 312px;
-    padding: 24px;
+    width: 100%;
+    padding: 24px 16px;
     background: linear-gradient(159deg, #e070a0 0%, #ffc0d5 100%);
+    @include tablet{
+        width: 100%;
+        padding: 38px;
+    }
+    @include desktop{
+        width: 630px;
+        padding: 65px 24px;
+    }
+
 }
 .collection__block-orange{
-    text-align: center;
+    text-align: start;
     justify-content: center;
+    padding: 24px 16px;
     background: linear-gradient(137deg, #de4f12 12.37%, #f7d385 100%);
+    @include tablet{
+        width: 100%;
+        text-align: start;
+        padding: 38px;
+    }
+    @include desktop{
+        // width: 630px;
+        width: 100%;
+        text-align: center;
+        padding: 54px 24px;
+    }
 }
 .collection__block-text{
     display: flex;
     width: 100%;
+    // align-items: ;
     flex-direction: column;
     justify-content: center;
+    @include desktop{
+        align-items: center ;
+    }
+    
 }
 .collection__block-text-small{
     align-items: flex-start; 
@@ -66,25 +140,46 @@
     bottom: 0;
     right: 0;
 }
-.image__snax-bacon{
+// .image__snax-bacon{
+//     position: absolute;
+//     height: 380px;
+//     bottom: -20px;
+//     left: -40px;
+// }
+.image__baget__white{
     position: absolute;
-    height: 380px;
-    bottom: -20px;
-    left: -40px;
-}
-.image__snax-onion{
-    position: absolute;
-    bottom: 0;
-    right: 0;
+    transform: rotate(-10deg);
+    bottom: 22px;
+    right: 10px;
 }
 .image__popcorn-caramel{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 300px;
+    display: none;
+    @include desktop{
+        display: block;
+        position: absolute;
+        bottom: 0;
+        left: 1px;
+        // transform: rotate(5deg);
+
+    }
+    // position: absolute;
+    // bottom: 0;
+    // left: 2px;
+    // height: 300px;
 }
 .image__popcorn-ready{
     position: absolute;
     bottom: 0;
     right: 0;
+}
+.image__baget__ketchup{
+    display: none;
+    @include desktop{
+        display: block;
+        position: absolute;
+        bottom: 24px;
+        left: 34px; 
+        transform: rotate(5deg);
+
+    }
 }
