--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -15,17 +15,17 @@
         @content;
     }
 }
-// @mixin retina {
-//     @media (min-device-pixel-ratio: 2),
-//         (min-resolution: 192dpi),
-//         (min-resolution: 2dppx) {
-//         @content;
-//     }
-
-// }
-
 @mixin retina {
-    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+    @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
         @content;
     }
+
 }
+
+// @mixin retina {
+//     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+//         @content;
+//     }
+// }
