--- a/css/main.css
+++ b/css/main.css
@@ -765,25 +765,52 @@ button:focus {
 .advantages__item {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 16px;
   margin-bottom: 24px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .advantages__item {
+    gap: 20px;
+  }
 }
 
 .advantages__list {
-  width: 413px;
-  padding: 24px;
+  width: 343px;
+  padding: 16px;
   background-color: var(--white);
   border-radius: 24px;
 }
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .advantages__list {
+    width: 314px;
+    padding: 24px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .advantages__list {
+    width: 413px;
+    padding: 24px;
+  }
+}
 
 .advantages__subtitle {
-  margin-top: 40px;
+  margin-top: 16px;
   margin-bottom: 8px;
   font-family: "Fixel Display", sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 140%;
   color: var(--black);
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .advantages__subtitle {
+    margin-top: 32px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .advantages__subtitle {
+    margin-top: 40px;
+  }
 }
 
 .advantage__button {
