--- a/sass/layouts/_section-advantages.scss
+++ b/sass/layouts/_section-advantages.scss
@@ -1,24 +1,41 @@
 .advantages__item{
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 16px;
     margin-bottom: 24px;
+    @include tablet{
+        gap: 20px;
+    }
 }
 .advantages__list{
-//    width: 365px;
-width: 413px;
-   padding: 24px;
+   width: 343px;
+   padding: 16px;
    background-color: var(--white);
    border-radius: 24px;
+   @include tablet{
+    width: 314px;
+    padding: 24px;
+   }
+   @include desktop{
+    width: 413px;
+    padding: 24px;
+
+   }
 }
 .advantages__subtitle{
-    margin-top: 40px;
+    margin-top: 16px;
     margin-bottom: 8px;
     font-family: 'Fixel Display', sans-serif;
     font-weight: 500;
     font-size: 20px;
     line-height: 140%;
     color: var(--black);
+    @include tablet{
+        margin-top: 32px;
+    }
+    @include desktop{
+        margin-top: 40px;
+    }
 }
 .advantage__button{
     background-color: var(--black);
