--- a/css/main.css
+++ b/css/main.css
@@ -821,7 +821,12 @@ button:focus {
 
 .statistic__title {
   text-align: start;
-  margin-bottom: 40px;
+  margin-bottom: 32px;
+}
+@media screen and (min-width: 1440px) {
+  .statistic__title {
+    margin-bottom: 40px;
+  }
 }
 
 .statistic__title-orange {
@@ -833,35 +838,88 @@ button:focus {
   flex-direction: column;
   border-radius: 24px;
   padding: 24px;
-  width: 305px;
+  width: 343px;
   background: linear-gradient(137deg, #de4f12 12.37%, #f7d385 100%);
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .statistic__block {
+    width: 314px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .statistic__block {
+    width: 305px;
+  }
 }
 
 .statistic__block-white {
-  width: 305px;
+  width: 343px;
   background-color: var(--white);
   background: 0;
   color: var(--white);
   border: 2px solid var(--orange-dark);
 }
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .statistic__block-white {
+    width: 314px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .statistic__block-white {
+    width: 305px;
+  }
+}
 
 .statistic__block-first {
   display: flex;
+  flex-direction: column;
   gap: 20px;
   margin-bottom: 20px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .statistic__block-first {
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .statistic__block-first {
+    flex-direction: row;
+  }
 }
 
 .statistic__block-second {
   display: flex;
+  flex-direction: column;
   gap: 20px;
-  margin-left: 327px;
-  margin-bottom: 56px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .statistic__block-second {
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .statistic__block-second {
+    flex-direction: row;
+    margin-left: 327px;
+    margin-bottom: 56px;
+  }
 }
 
 .statistic__block-number {
   color: var(--white);
-  margin-left: 233px;
-  margin-bottom: 51px;
+  margin-left: 280px;
+  margin-bottom: 32px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .statistic__block-number {
+    margin-left: 233px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .statistic__block-number {
+    margin-left: 233px;
+    margin-bottom: 51px;
+  }
 }
 
 .statistic__block-info {
@@ -886,7 +944,12 @@ button:focus {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin-left: 327px;
+  margin-top: 32px;
+}
+@media screen and (min-width: 1440px) {
+  .statistic__block-third {
+    margin-left: 327px;
+  }
 }
 
 .statistic__text {
