--- a/sass/layouts/_section-statistic.scss
+++ b/sass/layouts/_section-statistic.scss
@@ -1,6 +1,9 @@
 .statistic__title{
     text-align:start;
-    margin-bottom: 40px;
+    margin-bottom: 32px;
+    @include desktop{
+        margin-bottom: 40px;
+    }
 }
 .statistic__title-orange{
     color: var(--orange-dark);
@@ -10,35 +13,69 @@
     flex-direction: column;
     border-radius: 24px;
     padding: 24px;
-    // width: 257px;
-    width: 305px;
+    width: 343px;
     background: linear-gradient(137deg, #de4f12 12.37%, #f7d385 100%);
+    @include tablet{
+        width: 314px;
+    }
+    @include desktop{
+    width: 305px;
+}
+
 }
 .statistic__block-white{
-    // width: 253px;
-    width: 305px;
+    width: 343px;
     background-color: var(--white);
     background: 0;
     color: var(--white);
     border: 2px solid var(--orange-dark);
+    @include tablet{
+        width: 314px;
+    }
+    @include desktop{
+        width: 305px;
+    }
 }
 .statistic__block-first{
     display: flex;
+    flex-direction: column;
     gap: 20px;
     margin-bottom: 20px;
+    @include tablet{
+        flex-direction: row;
+    }
+    @include desktop{
+        flex-direction: row;
+    }
 }
 .statistic__block-second{
     display: flex;
+    flex-direction: column;
     gap: 20px;
-    margin-left: 327px;
-    margin-bottom: 56px;
+    // margin-left: 327px;
+    // margin-bottom: 56px;
+    @include tablet{
+        flex-direction: row;
+    }
+    @include desktop{
+        flex-direction: row;
+        margin-left: 327px;
+        margin-bottom: 56px;
+    }
 }
 
 
 .statistic__block-number{
     color: var(--white);
-    margin-left: 233px;
-    margin-bottom: 51px;
+    margin-left: 280px;
+    margin-bottom: 32px;
+    @include tablet{
+        margin-left: 233px;
+    }
+    @include desktop{
+        margin-left: 233px;
+        margin-bottom: 51px;
+    }
 }
 .statistic__block-info{
     font-family: 'Fixel Display', sans-serif;
@@ -59,7 +96,11 @@
     display: flex;
     flex-direction: column;
     justify-content:flex-start ;
-    margin-left: 327px;
+    margin-top: 32px;
+    // margin-left: 327px;
+    @include desktop{
+        margin-left: 327px;
+    } 
 }
 
 .statistic__text{
