--- a/css/main.css
+++ b/css/main.css
@@ -961,9 +961,21 @@ button:focus {
 }
 
 .partners__container {
-  width: 1440px;
-  padding: 80px 0;
+  width: 375px;
+  padding: 48px 0;
   margin: 0 auto;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .partners__container {
+    width: 744px;
+    padding: 48px 0;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .partners__container {
+    width: 1440px;
+    padding: 80px 0;
+  }
 }
 
 .marquee__images {
@@ -976,9 +988,16 @@ button:focus {
   display: flex;
   flex-direction: row;
   width: 1600%;
-  gap: 20px;
-  margin-bottom: 20px;
+  gap: 16px;
+  margin-bottom: 16px;
   animation: marquee__images-left 20s linear infinite alternate;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .partners__blocks-first {
+    gap: 20px;
+    margin-bottom: 20px;
+    animation: marquee__images-left 20s linear infinite alternate;
+  }
 }
 
 .partners__block {
@@ -986,20 +1005,38 @@ button:focus {
   align-items: center;
   justify-content: center;
   border-radius: 24px;
-  flex: 0 0 289px;
-  height: 104px;
+  flex: 0 0 163px;
+  height: 64px;
   padding: 5px;
   background-color: var(--white);
   white-space: nowrap;
   width: 20%;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .partners__block {
+    flex: 0 0 203px;
+    height: 80px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .partners__block {
+    flex: 0 0 289px;
+    height: 104px;
+  }
 }
 
 .partners__blocks-second {
   display: flex;
   flex-direction: row;
   width: 1600%;
-  gap: 20px;
+  gap: 16px;
   animation: marquee__images-left 20s linear infinite alternate;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .partners__blocks-second {
+    gap: 20px;
+    animation: marquee__images-left 20s linear infinite alternate;
+  }
 }
 
 @keyframes marquee__images-left {
