--- a/sass/layouts/_section-question.scss
+++ b/sass/layouts/_section-question.scss
@@ -1,11 +1,17 @@
 .question__form{
     position: relative;
-    // width: 582px;
-    width: 630px;
-    padding: 24px;
+    width: 344px;
+    padding: 16px;
     border-radius: 24px;
     background-color: var(--white);
     margin: 0 auto;
+    @include tablet{
+        width: 648px;
+    }
+    @include desktop{
+        width: 630px;
+        border-radius: 24px;
+    }
 }
 .question__title{
     text-align: left;
@@ -21,17 +27,22 @@
 }
 .question__input{
     display: flex;
-    // text-align: left;
     justify-content: center;
     border: 1px solid var(--grey-light);
     border-radius: 24px;
     padding: 12px 24px;
-    // width: 230px;
-    width: 281px;
-    // height: 22px;
-    height: 46px;
-    margin-right: 20px;
-    margin-bottom: 32px;
+    width: 100%;
+    margin-bottom: 20px;
+    @include tablet{
+        width: 281px;
+        margin-right: 20px;
+        margin-bottom: 32px;
+    }
+    @include desktop{
+        width: 281px;
+        margin-right: 20px;
+        margin-bottom: 32px;
+    }
 }
 .question__input::placeholder{
     color: var(--black);
@@ -43,7 +54,7 @@
     border: 1px solid var(--grey-light);
     border-radius: 24px;
     padding: 12px 24px;
-    width: 582px;
+    width: 100%;
     height: 104px;  
 }
 .question__textarea::placeholder{
@@ -51,18 +62,26 @@
 }
 .question__button{
     background-color: var(--black);
-    width: 582px;
+    width: 100%;
     height: 56px;
     color: var(--white);
    justify-content: center;
-}
+   }
 .question_image-popcorn{
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    display: none;
+    @include desktop{
+        display: block;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
 }
 .question_image-milk{
-    position: absolute;
-    bottom: 200px;
-    right: 0;
+    display: none;
+    @include desktop{
+        display: block;
+        position: absolute;
+        bottom: 200px;
+        right: 0;
+    }
 }
