--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -2,9 +2,31 @@
     background-color: var(--black);
 }
 .footer__container{
-    width: 1440px;
-    padding: 32px 80px 80px 80px;
+    width: 375px;
+    padding: 32px 16px;
     margin: 0 auto;
+    @include tablet{
+        width: 744px;
+        padding: 32px 48px;
+    }
+    @include desktop{
+        width: 1440px;
+        padding: 32px 80px;
+    }
+}
+.footer__logo{
+        display: block;
+        width: 120px;
+        height: 58px;
+        @include tablet{
+            width: 120px;
+            height: 58px;
+        }
+        @include desktop{
+            width: 197px;
+             height: 59px;
+        }
+
 }
 .link__container{
     display: flex;
@@ -12,10 +34,17 @@
     margin-bottom: 32px;
 }
 .item__container{
+    display: none;
+    @include tablet{
     display: flex;
-    width: 847px;
+    width: 500px;
     gap: 20px;
-    margin-left: 236px;
+    margin-left: 45px;
+    }
+    @include desktop{
+        margin-left: 236px;
+    }
+    
 }
 .footer__list{
     display: flex;
@@ -24,6 +53,17 @@
     width: 197px;
     padding: 16px;
 
+}
+.footer__item__container{
+    display: flex;
+    flex-direction: column;
+    @include tablet{
+        flex-direction: row;
+        margin-bottom: 64px;
+    }
+    @include desktop{
+        flex-direction: row;
+    }
 }
 .footer__link{
     display: flex;
@@ -34,20 +74,31 @@
 }
 .footer__information-container{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    // width: 413px;
     border-bottom: 1px solid var(--black-hover);;
-
+@include desktop{
+    flex-direction: row;
+}
 }
 .footer__information-item{
-     width: 100%;
-    // width: 413px;
+    width: 100%;
     padding-bottom: 24px;
+    @include tablet{
+        width: 314px;
+    }
+    @include desktop{
+        width: 413px;
+    }
 }
 .footer__information-list{
     display: flex;
+    width: 100%;
     align-items: center;
     margin-bottom: 16px;
+    @include tablet{
+        width: 314px;
+    }
 }
 .footer__information-list:last-child{
     margin-bottom: 0;
