--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -2,8 +2,9 @@
 .header{
     position: fixed;
     top: 0;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 0;
+    // left: 50%;
+    // transform: translateX(-50%);
     width: 375px;
     z-index: 20;
     display: flex;
