--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -2,15 +2,15 @@
 .header{
     position: fixed;
     top: 0;
-    left: 0;
-    // left: 50%;
-    // transform: translateX(-50%);
-    width: 375px;
+    // left: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 343px;
     z-index: 20;
     display: flex;
     align-items: center;
     justify-content:space-between;
-    padding:  16px 16px;
+    padding:  6px;
     border-radius: 32px;
     margin: 0 auto;
     >.navigation{
@@ -27,8 +27,8 @@
         border: none;
     }
     @include tablet{
-        width: 744px;
-        padding: 16px 48px;
+        width: 648px;
+        padding: 6px;
         >.navigation{
             display: none;
         }   
@@ -44,8 +44,8 @@
         }
     }
     @include desktop{
-        width: 1440px; 
-        padding: 16px 80px;
+        width: 1280px; 
+        padding: 6px;
         
         >.navigation{
             display: flex;
@@ -62,6 +62,9 @@
     fill: var(--white);
     background-color: transparent;
 
+}
+.icon__menu__mobile-second{
+    fill: var(--black);
 }
 .logo{
     margin-left: 18px;
